[package]
name = "gauth"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
dotenv = "0.15.0"
serde = "1.0.217"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "runtime-tokio", "time", "chrono"] }
jsonwebtoken = "9"

# Can be used to separate groups of tests later
# e.g. tests that need a DB vs. not
[features]
db-test = [] 
jwt-test = []

# The lib stays runtime-agnostic, Tokio is only needed for tests
[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
serial_test = "2.0"

[lib]
name="gauth"
path="src/lib.rs"